feat: added all sections

--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
         <div class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link"> Contacts </a>
+              <a href="#contact" class="header__nav-link"> Contacts </a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link"> About </a>
+              <a href="#about" class="header__nav-link"> About </a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link"> Education </a>
+              <a href="#education" class="header__nav-link"> Education </a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link"> Skills </a>
+              <a href="#skills" class="header__nav-link"> Skills </a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link"> language </a>
+              <a href="#language" class="header__nav-link"> language </a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link"> projects </a>
+              <a href="#projects" class="header__nav-link"> projects </a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link"> interests </a>
+              <a href="#interests" class="header__nav-link"> interests </a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link"> Employment </a>
+              <a href="#employment" class="header__nav-link"> Employment </a>
             </li>
           </ul>
         </div>
@@ -79,6 +79,123 @@
           </div>
         </div>
       </section>
+      <div class="wrapper">
+        <div class="container">
+          <div class="inner">
+            <aside class="contacts">
+              <div class="contacts__wrapper">
+                <h2 class="contacts__title" id="contact">Contacts</h2>
+                <ul class="contacts__list">
+                  <li class="contacts__item adress">
+                    220037, Republic of Belarus, Minsk, Bagratsiona 2nd lane,
+                    19/68
+                  </li>
+                  <li class="contacts__item e-mail">
+                    E-mail:
+                    <a href="mailto:vlad.banek@gmail.com"
+                      >vlad.banek@gmail.com</a
+                    >
+                  </li>
+                  <li class="contacts__item telegram">
+                    Telegram:
+                    <a href="https://telegram.me/vladbani">@vladbani</a>
+                  </li>
+                  <li class="contacts__item github">
+                    GitHub:
+                    <a href="http://"
+                      ><a href="https://github.com/uladban">uladban</a></a
+                    >
+                  </li>
+                  <li class="contacts__item tel">
+                    Tel: <a href="tel:+375296998786">+375 29 699 87 86</a>
+                  </li>
+                </ul>
+              </div>
+            </aside>
+            <section class="about" id="about">
+              <div class="about__wrapper">
+                <h2 class="about__title">About</h2>
+                <p class="about__text">
+                  I was born in Minsk. 38 years old. Now I work as a sales
+                  manager of computer equipment but I want to change the field
+                  of activity. I like programming. My goal is to learn
+                  JavaScript, Angular and take offer to Your company
+                </p>
+              </div>
+            </section>
+            <aside class="skills" id="skills">
+              <div class="skills__wrapper">
+              <h2 class="skills_title">
+                Skills
+              </h2>
+              <ul class="skills__list">
+                <li class="skills__item html">HTML</li>
+                <li class="skills__item css">CSS</li>
+                <li class="skills__item figma">Figma</li>
+                <li class="skills__item github">Git, Github</li>
+                <li class="skills__item javascript">JavaScript(a little)</li>
+              </ul>
+            </div>
+            </aside>
+            <section class="education" id="education">
+              <div class="education__wrapper">
+                <h2 class="educatrion__title">Education and Courses</h2>
+                <ul class="education__list">
+                  <li class="education__item"><a href="https://bntu.by/en/faculties/fitr" class="education__link">Belarusian National Technical University - Faculty of Information Technology and Robotics</a></li>
+                  <li class="education__item"><a href="http://bseu.by/english/faculty12/faculty12.htm" class="education__link">Belarussian State Economic University - Higher School of Management and Business</a></li>
+                  <li class="education__item"><a href="https://mfs-09.getcourse.ru/public/files/92698/179/badf30ace5bee7722820c534716a4533.png?e=1673913599&s=H-8amzUeN_cHFkZ7_WTL8A" class="education__link">From 0 to 1 – Markup Developer</a></li>
+                  <li class="education__item"><a href="https://app.rs.school/certificate/l9r29fvr" class="education__link">RS-School JS Pre-School 2022</a></li>
+                </ul>
+              </div>
+            </section>
+            <aside class="language" id="language">
+              <div class="language__wrapper">
+                <h2 class="language__title">
+                  Language
+                </h2>
+                <ul class="language__list">
+                  <li class="language__item">Russian - Native</li>
+                  <li class="language__item">Belorussian</li>
+                  <li class="language__item">English - A2</li>
+                </ul>
+              </div>
+            </aside>
+            <section class="employment" id="employment">
+              <div class="employment__wrapper">
+                <h2 class="employment__title">Employment</h2>
+                <p class="employment__text">
+                  sep.2021 - jan.2023 Ltd "BelKompSnabService" Computer Sales Manager
+                </p>
+              </div>
+            </section>
+            <aside class="interests" id="interests">
+              <div class="interests__wrapper">
+                <h2 class="interests__title">Interests</h2>
+                <ul class="interests__list">
+                  <li class="interests__item soccer">Football</li>
+                  <li class="interests__item running">Running</li>
+                  <li class="interests__item reading">Reading</li>
+                  <li class="interests__item movies">Movies</li>
+                  <li class="interests__item music">Music</li>
+                </ul>                
+              </div>
+            </aside>
+            <section class="projects" id="projects">
+              <div class="projects__wrapper">
+                <h2 class="projects__title">
+                  Projects
+                </h2>
+                <ul class="projects__list">
+                  <li class="projects__item"><a href="" class="projects__link">Curriculum vitae</a></li>
+                  <li class="projects__item"><a href="https://rolling-scopes-school.github.io/uladban-JSFEPRESCHOOL2022Q2/travel/" class="projects__link">Travel</a></li>
+                  <li class="projects__item"><a href="https://rolling-scopes-school.github.io/uladban-JSFEPRESCHOOL2022Q4/plants/" class="projects__link">Plants</a></li>
+                  <li class="projects__item"><a href="https://rolling-scopes-school.github.io/uladban-JSFEPRESCHOOL2022Q2/momentum/" class="projects__link">Momentum</a></li>
+                </ul>
+              </div>
+            </section>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
