--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                   Projects
                 </h2>
                 <ul class="projects__list">
-                  <li class="projects__item"><a href="" class="projects__link">Curriculum vitae</a></li>
+                  <li class="projects__item"><a href="https://uladban.github.io/datamola-cv/" class="projects__link">Curriculum vitae</a></li>
                   <li class="projects__item"><a href="https://rolling-scopes-school.github.io/uladban-JSFEPRESCHOOL2022Q2/travel/" class="projects__link">Travel</a></li>
                   <li class="projects__item"><a href="https://rolling-scopes-school.github.io/uladban-JSFEPRESCHOOL2022Q4/plants/" class="projects__link">Plants</a></li>
                   <li class="projects__item"><a href="https://rolling-scopes-school.github.io/uladban-JSFEPRESCHOOL2022Q2/momentum/" class="projects__link">Momentum</a></li>
