feat: added footer

--- a/index.html
+++ b/index.html
@@ -197,5 +197,13 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__copy"> copyright &copy 2023</div>
+          <div class="footer__author"><a href="https://github.com/uladban" class="footer__link">Uladzimir Bankouski</a></div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
