feat: added adaptive and burger

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
             <li class="header__close">
               <img
-                src="../plants/icons/close.svg"
+                src="./icons/close.svg"
                 alt="close burger"
                 class="close"
               />
@@ -237,5 +237,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/main.js"></script>
   </body>
 </html>
